mojo/public/cpp/system/handle.h
@@ -84,8 +84,9 @@ class ScopedHandleBase {
       : handle_(other.release()) {}
 
   // Move-only constructor and operator=.
-  ScopedHandleBase(ScopedHandleBase&& other) : handle_(other.release()) {}
-  ScopedHandleBase& operator=(ScopedHandleBase&& other) {
+  ScopedHandleBase(ScopedHandleBase&& other) noexcept
+      : handle_(other.release()) {}
+  ScopedHandleBase& operator=(ScopedHandleBase&& other) noexcept {
     if (&other != this) {
       CloseIfNecessary();
       handle_ = other.release();
